# nano-rl

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml  requirements.txt
examples/: _common.py  plot.py  train_dpo.py  train_grpo.py  train_ppo.py  train_reward_model.py
nanorl/: __init__.py  data.py  inference.py  models.py  rewards.py  trainer.py  utils.py
nanorl/rl/: __init__.py  common.py  dpo.py  grpo.py  ppo.py  reward_model.py
scripts/: quickstart.sh
scripts/vastai/: README.md  launch.sh  sync_and_run.sh  train_gpu.sh
tests/: test_smoke.py
