[project]
name = "nano-rl"
version = "0.1.0"
description = "Minimal, from-scratch RL infrastructure for post-training small LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.44",
    "numpy",
]

[project.optional-dependencies]
# Plotting (the quickstart curve) and the optional GSM8K loader.
viz = ["matplotlib>=3.7"]
data = ["datasets>=2.18"]
dev = ["pytest>=8.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["nanorl*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
